# telemetrix-rpi-pico

./: 404.html  README.md  about.html  about_the_apis.html  about_the_apis2.html  analog_input.html  analog_input2.html  debug.html  debug2.html  dht.html  dht2.html  digital_input.html  digital_input2.html  digital_output.html  digital_output2.html  examples.html  i2c.html  i2c2.html  importing.html  importing2.html  index.html  install_pico_server.html  install_telemetrix.html  license.html  management.html  management2.html  mkdocs.yml  neopixel.html  neopixel2.html  pwm.html  pwm2.html  pypi_desc.md  pyproject.toml  python_3_verify.html  servo.html  servo2.html  setup.py  sitemap.xml  sonar.html  sonar2.html
about/: index.html
about_the_apis/: index.html
about_the_apis2/: index.html
analog_input/: index.html
analog_input2/: index.html
debug/: index.html
debug2/: index.html
dht/: index.html
dht2/: index.html
digital_input/: index.html
digital_input2/: index.html
digital_output/: index.html
digital_output2/: index.html
docs/: about.md  about_the_apis.md  about_the_apis2.md  analog_input.md  analog_input2.md  debug.md  debug2.md  dht.md  dht2.md  digital_input.md  digital_input2.md  digital_output.md  digital_output2.md  examples.md  i2c.md  i2c2.md  importing.md  importing2.md  index.md  install_pico_server.md  install_telemetrix.md  management.md  management2.md  neopixel.md  neopixel2.md  pwm.md  pwm2.md  python_3_verify.md  servo.md  servo2.md  sonar.md  sonar2.md  spi.md  spi2.md
examples/: analog_input.py  blink.py  dht.py  fade.py  (+13 more)
(+25 files in other folders)
